Removed unused file

--- a/A01_the_machine_learning_landscape.ipynb
+++ b/A01_the_machine_learning_landscape.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "55f427fa",
+   "id": "6698eb03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7404896",
+   "id": "5b666650",
    "metadata": {},
    "source": [
     "## Download dataset"
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83c32151",
+   "id": "4cc7a4e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "892be127",
+   "id": "73eb068c",
    "metadata": {},
    "source": [
     "## Function to prepare country stats"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ee929240",
+   "id": "ed1d8779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dc36033f",
+   "id": "0b620c8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df4b9b6a",
+   "id": "f413ff54",
    "metadata": {},
    "source": [
     "## Visualize the data"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4e2010cf",
+   "id": "52bb640a",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2266f2e",
+   "id": "a1ee90c7",
    "metadata": {},
    "source": [
     "## Trying out Linear Model"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8eb733cf",
+   "id": "4105850f",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45f21c15",
+   "id": "e48c9c36",
    "metadata": {},
    "source": [
     "## trying out k-Nearest Neighbors"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a9fa1bec",
+   "id": "971db233",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f0637a",
+   "id": "4dac75d0",
    "metadata": {},
    "source": [
     "### Question Answers After Exercise"
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9061484",
+   "id": "b68676fe",
    "metadata": {},
    "source": [
     "#### 1. How would you define Machine Learning?"
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7893cffc",
+   "id": "9f507db2",
    "metadata": {},
    "source": [
     "Machine Learning can be defined as improving on task t given a performace p"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23a25cf",
+   "id": "add15fff",
    "metadata": {},
    "source": [
     "#### 2. Can you name four types of problems where it shines?"
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4e2c95",
+   "id": "24bf2cac",
    "metadata": {},
    "source": [
     "Good for complex problems with \n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c67cd51",
+   "id": "28f32c6b",
    "metadata": {},
    "source": [
     "#### 3.What is a labeled training set?"
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5c7266",
+   "id": "d4470e36",
    "metadata": {},
    "source": [
     "which has predicted value of class"
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5bfb07",
+   "id": "9ff28a9f",
    "metadata": {},
    "source": [
     "#### 4.What are the two most common supervised tasks?"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f2bc03",
+   "id": "1ae0dab8",
    "metadata": {},
    "source": [
     "- classification\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7342996",
+   "id": "a0689ebd",
    "metadata": {},
    "source": [
     "#### 5. Can you name four common unsupervised tasks?"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c24cd00e",
+   "id": "d75b4a5b",
    "metadata": {},
    "source": [
     "- clustering\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19fc47a",
+   "id": "2d0e31fe",
    "metadata": {},
    "source": [
     "#### 6. What type of Machine Learning algorithm would you use to allow a robot to walk in various unknown terrains?"
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a597ed70",
+   "id": "2c8ad826",
    "metadata": {},
    "source": [
     "reinforcement learning"
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edfb7d7c",
+   "id": "87c4d98c",
    "metadata": {},
    "source": [
     "#### 7. What type of algorithm would you use to segment your customers into multiple groups?"
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba78a10a",
+   "id": "2772b864",
    "metadata": {},
    "source": [
     "clustering - KMeans"
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b95e135",
+   "id": "381f6768",
    "metadata": {},
    "source": [
     "#### 8. Would you frame the problem of spam detection as a supervised learning problem or an unsupervised learning problem?"
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7159f43c",
+   "id": "cadf7cef",
    "metadata": {},
    "source": [
     "supervised"
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffed0d37",
+   "id": "f0942b0a",
    "metadata": {},
    "source": [
     "#### 9. What is an online learning system?"
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d391408",
+   "id": "affa9a40",
    "metadata": {},
    "source": [
     "Learn continuosly with stream of data"
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed35d4db",
+   "id": "6935fe58",
    "metadata": {},
    "source": [
     "#### 10. What is out-of-core learning?"
@@ -349,13 +349,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3a7f218",
+   "id": "da5cc486",
    "metadata": {},
-   "source": []
+   "source": [
+    "not all training data resides in machine. Model is trained with first part of data, then next part is sent and so on. It is offline training"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "950dbce8",
+   "id": "2d8396a4",
    "metadata": {},
    "source": [
     "#### 11. What type of learning algorithm relies on a similarity measure to make predictions?"
@@ -363,13 +365,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89b2683",
+   "id": "162f48e1",
    "metadata": {},
-   "source": []
+   "source": [
+    "K Nearest Neighbor"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "4803ae61",
+   "id": "2634c2de",
    "metadata": {},
    "source": [
     "#### 12. What is the difference between a model parameter and a learning algorithm’s hyperparameter?"
@@ -377,13 +381,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918ffcfb",
+   "id": "10b697fb",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "58ec1e27",
+   "id": "ac126554",
    "metadata": {},
    "source": [
     "#### 13. What do model-based learning algorithms search for? What is the most common strategy they use to succeed? How do they make predictions?"
@@ -391,13 +395,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa65b1f",
+   "id": "c4ecc11a",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7e9a72c8",
+   "id": "dc40e5db",
    "metadata": {},
    "source": [
     "#### 14. Can you name four of the main challenges in Machine Learning?"
@@ -405,13 +409,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fda015",
+   "id": "e7dd1fb7",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "dde7e99e",
+   "id": "e1d981f5",
    "metadata": {},
    "source": [
     "#### 15. If your model performs great on the training data but generalizes poorly to new instances, what is happening? Can you name three possible solutions?"
@@ -419,13 +423,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d6bb50",
+   "id": "1c423b67",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fd232c71",
+   "id": "c577e4c2",
    "metadata": {},
    "source": [
     "#### 16. What is a test set, and why would you want to use it?"
@@ -433,13 +437,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a51370a7",
+   "id": "fb0750f8",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "39a2aa4e",
+   "id": "83f4e1fd",
    "metadata": {},
    "source": [
     "#### 17. What is the purpose of a validation set?"
@@ -447,13 +451,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b31b4a75",
+   "id": "b8f91ae6",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6d7a547d",
+   "id": "ed27622a",
    "metadata": {},
    "source": [
     "#### 18. What is the train-dev set, when do you need it, and how do you use it?"
@@ -461,13 +465,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dcebbb2",
+   "id": "bce58470",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "579f296a",
+   "id": "3d64b669",
    "metadata": {},
    "source": [
     "#### 19. What can go wrong if you tune hyperparameters using the test set?"
@@ -475,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5038ef3",
+   "id": "70da735b",
    "metadata": {},
    "source": []
   }
