--- a/A01_the_machine_learning_landscape.ipynb
+++ b/A01_the_machine_learning_landscape.ipynb
@@ -201,7 +201,7 @@
    "id": "9f507db2",
    "metadata": {},
    "source": [
-    "Machine Learning can be defined as improving on task t given a performace p"
+    "Machine Learning is about building systems that can learn from data, Learning can be defined as improving on task t given a performace p"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "id": "d4470e36",
    "metadata": {},
    "source": [
-    "which has predicted value of class"
+    "which has desired value (label) for each row"
    ]
   },
   {
@@ -271,8 +271,9 @@
    "metadata": {},
    "source": [
     "- clustering\n",
-    "- aggregation\n",
-    "- "
+    "- association rule learning\n",
+    "- visualization\n",
+    "- dimensionality reduction"
    ]
   },
   {
@@ -304,7 +305,8 @@
    "id": "2772b864",
    "metadata": {},
    "source": [
-    "clustering - KMeans"
+    "don't know which groups -> clustering\n",
+    "if you know groups -> supervised learning to predict group"
    ]
   },
   {
@@ -352,7 +354,7 @@
    "id": "da5cc486",
    "metadata": {},
    "source": [
-    "not all training data resides in machine. Model is trained with first part of data, then next part is sent and so on. It is offline training"
+    "not all training data resides in machine. Uses mini batches of data and use online learning techniques to learn from these mini batches"
    ]
   },
   {
@@ -368,7 +370,7 @@
    "id": "162f48e1",
    "metadata": {},
    "source": [
-    "K Nearest Neighbor"
+    "Instance based learning learns the training data by heart; uses similarity index to find most similar learned instances; K Nearest Neighbor"
    ]
   },
   {
@@ -383,7 +385,10 @@
    "cell_type": "markdown",
    "id": "10b697fb",
    "metadata": {},
-   "source": []
+   "source": [
+    "model parameter -> required by model like K-Means has K -> number of clusters; slope of linear model\n",
+    "Learning algorithm -> Tries to find optimal value of model parameters using parameter of learning algorithm; amount of regularization; Learning rate\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +402,12 @@
    "cell_type": "markdown",
    "id": "c4ecc11a",
    "metadata": {},
-   "source": []
+   "source": [
+    "minimise error function -> to make predictions as close to actual\n",
+    "Gradient descent\n",
+    "parameters are calculated based on which minimizes error; a function is computed; which is used to give predictions\n",
+    "f(x)= y; ; where x can be vector"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,7 +421,14 @@
    "cell_type": "markdown",
    "id": "e7dd1fb7",
    "metadata": {},
-   "source": []
+   "source": [
+    "- data is poor quality\n",
+    "- lack of data\n",
+    "- model trained on today may not reflect truth of future\n",
+    "- bias against data you have trained\n",
+    "- underfitting\n",
+    "- overfitting"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,7 +442,14 @@
    "cell_type": "markdown",
    "id": "1c423b67",
    "metadata": {},
-   "source": []
+   "source": [
+    "- overfitting\n",
+    "Possible solution\n",
+    "- getting more data\n",
+    "- reducing number of features \n",
+    "- simiple algorithm\n",
+    "- regularization"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -439,7 +463,9 @@
    "cell_type": "markdown",
    "id": "fb0750f8",
    "metadata": {},
-   "source": []
+   "source": [
+    "- to test your model against unknown data during training"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -453,7 +479,9 @@
    "cell_type": "markdown",
    "id": "b8f91ae6",
    "metadata": {},
-   "source": []
+   "source": [
+    "- to compare multiple model performance during training"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -467,7 +495,9 @@
    "cell_type": "markdown",
    "id": "bce58470",
    "metadata": {},
-   "source": []
+   "source": [
+    "The train-dev set is used when there is a risk of mismatch between the training data and the data used in the validation and test datasets (which should always be as close as possible to the data used once the model is in production). The train-dev set is a part of the training set that’s held out (the model is not trained on it). The model is trained on the rest of the training set, and evaluated on both the train-dev set and the validation set. If the model performs well on the training set but not on the train-dev set, then the model is likely overfitting the training set. If it performs well on both the training set and the train-dev set, but not on the validation set, then there is probably a significant data mismatch between the training data and the validation + test data, and you should try to improve the training data to make it look more like the validation + test data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -481,7 +511,9 @@
    "cell_type": "markdown",
    "id": "70da735b",
    "metadata": {},
-   "source": []
+   "source": [
+    "- overfitting"
+   ]
   }
  ],
  "metadata": {
