added auto diff

--- a/A10_neural_nets_with_keras.ipynb
+++ b/A10_neural_nets_with_keras.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6933c687",
+   "id": "09cade8f",
    "metadata": {},
    "source": [
     "It is based on a slightly different artificial neuron (see Figure 10-4) called a **threshold logic unit (TLU)**, or sometimes a linear threshold unit (LTU). The inputs and output are numbers (instead of binary on/off values), and each input connection is associated with a weight"
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "537431e8",
+   "id": "66463558",
    "metadata": {},
    "source": [
     "![MLP XOR function](images/prashant/MLP_XOR.png)"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83d5673a",
+   "id": "1698d5b1",
    "metadata": {},
    "source": [
     "### Backpropagation\n",
@@ -290,12 +290,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59eec92b",
+   "cell_type": "markdown",
+   "id": "7d3d4e16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Autodiff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "873eea10",
+   "metadata": {},
+   "source": [
+    "Automatically differentiating\n",
+    "- Forward auto diff -> needs more passes per parameter\n",
+    "- Reverse auto diff -> needs less passes if we have less output"
+   ]
   }
  ],
  "metadata": {
